--- a/fineract-helm/templates/fineract-server-deployment.yaml
+++ b/fineract-helm/templates/fineract-server-deployment.yaml
@@ -246,4 +246,28 @@ data:
   .dockerconfigjson: >-
     eyJhdXRocyI6eyJsaHIub2Npc...
 
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: mysql-dev
+  namespace: paymenthub-ns
+spec:
+  type: ClusterIP
+  ports:
+    - port: 3306
+      targetPort: 3306
+
+---
+kind: Endpoints
+apiVersion: v1
+metadata:
+  name: mysql-dev
+  namespace: paymenthub-ns
+subsets:
+  - addresses:
+      - ip: 10.0.1.229
+    ports:
+      - port: 3306
+
 {{- end }}
