--- a/.github/workflows/oci-deployment.yml
+++ b/.github/workflows/oci-deployment.yml
@@ -3,9 +3,7 @@ name: OCI CI/CD
 on:
   push:
     branches: ["ekesha-dev"]
-#    paths:
-#      - app/**
-#  workflow_dispatch:
+
 env:
   IMAGE: 'paymenthub-registry'
 
@@ -13,7 +11,7 @@ jobs:
   build:
     name: 'Setup, Build, Publish, and Deploy'
     runs-on: ubuntu-latest
-    environment: 'dev'
+    environment: dev
     steps:
       - name: Checkout
         uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332
@@ -27,14 +25,6 @@ jobs:
           distribution: 'zulu'
           cache: gradle
 
-#      - name: Set up QEMU
-#        uses: docker/setup-qemu-action@v1
-#
-#      - name: Set up Docker Buildx
-#        id: buildx
-#        uses: docker/setup-buildx-action@v1
-#        with:
-#          install: true
       - name: 'Install OCI CLI'
         run: |
           mkdir ~/.oci
@@ -67,13 +57,6 @@ jobs:
           username: ${{ secrets.OCI_DOCKERHUB_USERNAME }}
           password: ${{ secrets.OCI_DOCKERHUB_PASSWORD }}
 
-#      - name: Available platforms
-#        run: echo ${{ steps.buildx.outputs.platforms }}
-
-#      - name: Build
-#        run: |
-#          docker build --push --platform linux/amd64,linux/arm64 -t ${{ secrets.DOCKER_URL }}/${{ secrets.DOCKER_OBJECT_STORAGE_NAMESPACE }}/free-kubernetes-nginx:latest app/.
-          # Build the Docker image
       - name: Build the image
         run: ./gradlew --no-daemon --console=plain :fineract-provider:clean :fineract-provider:compileJava :fineract-provider:jibDockerBuild -x test -x cucumber
         env:
