--- a/.github/workflows/oci-deployment.yml
+++ b/.github/workflows/oci-deployment.yml
@@ -85,7 +85,7 @@ jobs:
           
           helm repo update
           
-          helm upgrade \
+          helm install \
           --set fineract.image="${{ secrets.DOCKER_URL }}/${{ secrets.DOCKER_OBJECT_STORAGE_NAMESPACE }}/$IMAGE:latest" \
           --set fineract.env.FINERACT_SERVER_PORT=${{ secrets.FINERACT_SERVER_PORT }} \
           --set fineract.env.FINERACT_NODE_ID="${{ secrets.FINERACT_NODE_ID }}" \
@@ -102,4 +102,4 @@ jobs:
           --set fineract.env.FINERACT_ADMIN_USERNAME="${{ secrets.FINERACT_HIKARI_USERNAME }}" \
           --set fineract.env.FINERACT_DEFAULT_TENANTDB_UID="${{ secrets.FINERACT_HIKARI_USERNAME }}" \
           -f fineract-helm/values.yaml ph-ee-backend fineract-helm/ \
-          --install --namespace "${{ secrets.NAMESPACE }}"
+          --namespace "${{ secrets.NAMESPACE }}"
