--- a/fineract-provider/src/main/resources/application.properties
+++ b/fineract-provider/src/main/resources/application.properties
@@ -37,12 +37,12 @@ fineract.tenant.description=${FINERACT_DEFAULT_TENANTDB_DESCRIPTION:Default Demo
 fineract.tenant.master-password=${FINERACT_DEFAULT_TENANTDB_MASTER_PASSWORD:fineract}
 fineract.tenant.encrytion=${FINERACT_DEFAULT_TENANTDB_ENCRYPTION:"AES/CBC/PKCS5Padding"}
 
-fineract.tenant.read-only-host=${FINERACT_DEFAULT_TENANTDB_RO_HOSTNAME:}
-fineract.tenant.read-only-port=${FINERACT_DEFAULT_TENANTDB_RO_PORT:}
-fineract.tenant.read-only-username=${FINERACT_DEFAULT_TENANTDB_RO_UID:}
-fineract.tenant.read-only-password=${FINERACT_DEFAULT_TENANTDB_RO_PWD:}
-fineract.tenant.read-only-parameters=${FINERACT_DEFAULT_TENANTDB_RO_CONN_PARAMS:}
-fineract.tenant.read-only-name=${FINERACT_DEFAULT_TENANTDB_RO_NAME:}
+fineract.tenant.read-only-host=${FINERACT_DEFAULT_TENANTDB_RO_HOSTNAME}
+fineract.tenant.read-only-port=${FINERACT_DEFAULT_TENANTDB_RO_PORT}
+fineract.tenant.read-only-username=${FINERACT_DEFAULT_TENANTDB_RO_UID}
+fineract.tenant.read-only-password=${FINERACT_DEFAULT_TENANTDB_RO_PWD}
+fineract.tenant.read-only-parameters=${FINERACT_DEFAULT_TENANTDB_RO_CONN_PARAMS}
+fineract.tenant.read-only-name=${FINERACT_DEFAULT_TENANTDB_RO_NAME}
 
 fineract.tenant.config.min-pool-size=${FINERACT_CONFIG_MIN_POOL_SIZE:-1}
 fineract.tenant.config.max-pool-size=${FINERACT_CONFIG_MAX_POOL_SIZE:-1}
