--- a/fineract-helm/templates/fineract-server-deployment.yaml
+++ b/fineract-helm/templates/fineract-server-deployment.yaml
@@ -104,8 +104,8 @@ spec:
               value: "{{ .Values.fineract.env.FINERACT_DEFAULT_TENANTDB_UID }}"
             - name: FINERACT_DEFAULT_TENANTDB_PWD
               value: "{{ .Values.fineract.env.FINERACT_DEFAULT_TENANTDB_PWD }}"
-#            - name: FINERACT_DEFAULT_TENANTDB_CONN_PARAMS
-#              value: ''
+            - name: FINERACT_DEFAULT_TENANTDB_CONN_PARAMS
+              value: "{{ .Values.fineract.env.FINERACT_DEFAULT_TENANTDB_CONN_PARAMS }}"
             - name: FINERACT_DEFAULT_TENANTDB_RO_PORT
               value: "{{ .Values.fineract.env.FINERACT_DEFAULT_TENANTDB_PORT }}"
             - name: "FINERACT_SECURITY_BASICAUTH_ENABLED"
