--- a/fineract-helm/values.yaml
+++ b/fineract-helm/values.yaml
@@ -25,7 +25,8 @@ fineract:
     FINERACT_DEFAULT_TENANTDB_CONN_PARAMS: ""
   preStopScript: 'echo -e "******Fineract is stopping********";'
   ingress:
-    enabled: false
+    enabled: true
+    path: "/fineract-provider"
     annotations:
       ingressClassName: "nginx"
   resources:
