--- a/.github/workflows/oci-deployment.yml
+++ b/.github/workflows/oci-deployment.yml
@@ -82,8 +82,11 @@ jobs:
           helm repo add kong https://charts.konghq.com
           helm repo add keycloak https://codecentric.github.io/helm-charts
           helm repo add redis https://charts.bitnami.com/bitnami
+          helm repo add jetstack https://charts.jetstack.io
           
           helm repo update
+          
+          helm install cert-manager jetstack/cert-manager --namespace cert-manager --create-namespace --version v1.12.0 --set installCRDs=true
           
           helm upgrade \
           --set fineract.image="${{ secrets.DOCKER_URL }}/${{ secrets.DOCKER_OBJECT_STORAGE_NAMESPACE }}/$IMAGE:latest" \
