feat: added lets encrypt ssl

--- a/fineract-helm/values.yaml
+++ b/fineract-helm/values.yaml
@@ -30,6 +30,7 @@ fineract:
     path: "/fineract-provider"
     annotations:
       ingressClassName: "nginx"
+      cert-manager.io/cluster-issuer: "letsencrypt-dev"
   resources:
     limits:
       cpu: "1500m"
