--- a/fineract-helm/templates/fineract-server-deployment.yaml
+++ b/fineract-helm/templates/fineract-server-deployment.yaml
@@ -20,8 +20,8 @@
 apiVersion: v1
 kind: Service
 metadata:
-#  labels:
-#    app: fineract-server
+  labels:
+    app: fineract-server
   name: fineract-server-srv
 #  annotations:
 #    cloud.google.com/neg: '{"ingress": true}'
