feat: added lets encrypt ssl

--- a/fineract-helm/templates/fineract-server-deployment.yaml
+++ b/fineract-helm/templates/fineract-server-deployment.yaml
@@ -200,6 +200,13 @@ spec:
   - host: "{{ .Values.fineract.ingress.hostname }}"
     http:
       paths:
+        - path: /http
+          pathType: Prefix
+          backend:
+          ervice:
+          name: fineract-server-srv  # Service for HTTP traffic
+          port:
+            number: 80
         - path: "{{ .Values.fineract.ingress.path }}"
           pathType: Prefix
           backend:
