feat: added lets encrypt ssl

--- a/fineract-helm/templates/fineract-server-deployment.yaml
+++ b/fineract-helm/templates/fineract-server-deployment.yaml
@@ -203,10 +203,10 @@ spec:
         - path: /http
           pathType: Prefix
           backend:
-          ervice:
-          name: fineract-server-srv  # Service for HTTP traffic
-          port:
-            number: 80
+            service:
+              name: fineract-server-srv  # Service for HTTP traffic
+              port:
+                number: 80
         - path: "{{ .Values.fineract.ingress.path }}"
           pathType: Prefix
           backend:
