--- a/fineract-helm/templates/fineract-server-deployment.yaml
+++ b/fineract-helm/templates/fineract-server-deployment.yaml
@@ -31,6 +31,10 @@ spec:
       protocol: TCP
       port: {{ .Values.fineract.env.CONTAINER_PORT }}
       targetPort: {{ .Values.fineract.env.FINERACT_SERVER_PORT }}
+    - name: http
+      protocol: TCP
+      port: 80
+      targetPort: 8080
   selector:
     app: fineract-server
     tier: backend
