--- a/fineract-helm/templates/fineract-server-deployment.yaml
+++ b/fineract-helm/templates/fineract-server-deployment.yaml
@@ -311,7 +311,10 @@ spec:
     solvers:
       - http01:
           ingress:
-            class: nginx
+            ingressTemplate:
+              metadata:
+                annotations:
+                  kubernetes.io/ingress.class: nginx
 
 ---
 apiVersion: cert-manager.io/v1
