--- a/fineract-helm/templates/fineract-server-deployment.yaml
+++ b/fineract-helm/templates/fineract-server-deployment.yaml
@@ -311,10 +311,7 @@ spec:
     solvers:
       - http01:
           ingress:
-            ingressTemplate:
-              metadata:
-                annotations:
-                  kubernetes.io/ingress.class: nginx
+            class: public
 
 ---
 apiVersion: cert-manager.io/v1
