--- a/fineract-helm/values.yaml
+++ b/fineract-helm/values.yaml
@@ -26,7 +26,7 @@ fineract:
   preStopScript: 'echo -e "******Fineract is stopping********";'
   ingress:
     enabled: true
-    hostname: "api.vuna.io"
+    hostname: api.vuna.io
     path: "/fineract-provider"
     annotations:
       ingressClassName: public
