--- a/fineract-helm/templates/fineract-server-deployment.yaml
+++ b/fineract-helm/templates/fineract-server-deployment.yaml
@@ -200,6 +200,7 @@ metadata:
 {{ toYaml .Values.fineract.ingress.annotations | indent 4 }}
 {{- end }}
 spec:
+  ingressClassName: nginx
   rules:
   - host: "{{ .Values.fineract.ingress.hostname }}"
     http:
