--- a/fineract-helm/values.yaml
+++ b/fineract-helm/values.yaml
@@ -31,6 +31,8 @@ fineract:
     annotations:
       kubernetes.io/ingress.class: nginx
       cert-manager.io/cluster-issuer: letsencrypt-dev
+      acme.cert-manager.io/http01-edit-in-place: true
+      nginx.ingress.kubernetes.io/whitelist-source-range: 0.0.0.0/0,::/0
   resources:
     limits:
       cpu: "1500m"
