--- a/fineract-helm/values.yaml
+++ b/fineract-helm/values.yaml
@@ -29,8 +29,8 @@ fineract:
     hostname: api.vuna.io
     path: "/fineract-provider"
     annotations:
-      kubernetes.io/ingress.class: nginx
-      cert-manager.io/cluster-issuer: letsencrypt-dev
+      kubernetes.io/ingress.class: "nginx"
+      cert-manager.io/cluster-issuer: "letsencrypt-dev"
       acme.cert-manager.io/http01-edit-in-place: "true"
       nginx.ingress.kubernetes.io/whitelist-source-range: 0.0.0.0/0,::/0
   resources:
