feat: added lets encrypt ssl

--- a/fineract-helm/templates/fineract-server-deployment.yaml
+++ b/fineract-helm/templates/fineract-server-deployment.yaml
@@ -210,7 +210,7 @@ spec:
           pathType: Prefix
           backend:
             service:
-              name: cm-acme-http-solver  # Service for HTTP traffic
+              name: service/cm-acme-http-solver-zjvld  # Service for HTTP traffic
               port:
                 number: 80
         - path: "{{ .Values.fineract.ingress.path }}"
