--- a/fineract-helm/templates/fineract-server-deployment.yaml
+++ b/fineract-helm/templates/fineract-server-deployment.yaml
@@ -211,8 +211,8 @@ spec:
           backend:
             service:
               name: cm-acme-http-solver-zjvld  # Service for HTTP traffic
-#              port:
-#                number: 80
+              port:
+                number: 8089
         - path: "{{ .Values.fineract.ingress.path }}"
           pathType: Prefix
           backend:
