feat: added lets encrypt ssl

--- a/fineract-helm/templates/fineract-server-deployment.yaml
+++ b/fineract-helm/templates/fineract-server-deployment.yaml
@@ -311,7 +311,7 @@ spec:
     privateKeySecretRef:
       name: letsencrypt-dev-private-key
     solvers:
-      - http01:
+      - dns01:
           ingress:
             class: nginx
 
