--- a/fineract-helm/templates/fineract-server-deployment.yaml
+++ b/fineract-helm/templates/fineract-server-deployment.yaml
@@ -306,12 +306,12 @@ metadata:
   name: letsencrypt-dev
 spec:
   acme:
-    server: https://acme-v02.api.letsencrypt.org/directory
+    server: https://acme-staging-v02.api.letsencrypt.org/directory
     email: alex@vuna.io
     privateKeySecretRef:
       name: letsencrypt-dev-private-key
     solvers:
-      - dns01:
+      - http01:
           ingress:
             class: nginx
 
