feat: added lets encrypt ssl

--- a/fineract-helm/templates/fineract-server-deployment.yaml
+++ b/fineract-helm/templates/fineract-server-deployment.yaml
@@ -35,7 +35,7 @@ spec:
     - name: http
       protocol: TCP
       port: 80
-      targetPort: 8080
+      targetPort: 8089
       nodePort: 30748
   selector:
     app: fineract-server
@@ -206,13 +206,13 @@ spec:
   - host: "{{ .Values.fineract.ingress.hostname }}"
     http:
       paths:
-#        - path: /.well-known/acme-challenge/
-#          pathType: Prefix
-#          backend:
-#            service:
-#              name: cm-acme-http-solver-tw5cg  # Service for HTTP traffic
-#              port:
-#                number: 8090
+        - path: /
+          pathType: Prefix
+          backend:
+            service:
+              name: cm-acme-http-solver-tw5cg  # Service for HTTP traffic
+              port:
+                number: 8090
         - path: "{{ .Values.fineract.ingress.path }}"
           pathType: Prefix
           backend:
