--- a/fineract-helm/values.yaml
+++ b/fineract-helm/values.yaml
@@ -33,6 +33,7 @@ fineract:
       cert-manager.io/cluster-issuer: "letsencrypt-dev"
       acme.cert-manager.io/http01-edit-in-place: "true"
       nginx.ingress.kubernetes.io/whitelist-source-range: 0.0.0.0/0,::/0
+      nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
   resources:
     limits:
       cpu: "1500m"
