--- a/fineract-helm/templates/fineract-server-deployment.yaml
+++ b/fineract-helm/templates/fineract-server-deployment.yaml
@@ -207,13 +207,13 @@ spec:
   - host: "{{ .Values.fineract.ingress.hostname }}"
     http:
       paths:
-        - path: /.well-known/acme-challenge
-          pathType: Prefix
-          backend:
-            service:
-              name: cm-acme-http-solver  # Service for HTTP traffic
-              port:
-                number: 80
+#        - path: /.well-known/acme-challenge
+#          pathType: Prefix
+#          backend:
+#            service:
+#              name: cm-acme-http-solver  # Service for HTTP traffic
+#              port:
+#                number: 80
         - path: "{{ .Values.fineract.ingress.path }}"
           pathType: Prefix
           backend:
@@ -314,7 +314,7 @@ spec:
     solvers:
       - http01:
           ingress:
-            class: nginx
+            ingressClassName: nginx
 
 ---
 apiVersion: cert-manager.io/v1
