feat: added lets encrypt ssl

--- a/fineract-helm/values.yaml
+++ b/fineract-helm/values.yaml
@@ -34,6 +34,7 @@ fineract:
 #      acme.cert-manager.io/http01-edit-in-place: "true"
 #      nginx.ingress.kubernetes.io/whitelist-source-range: 0.0.0.0/0,::/0
       nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
+      nginx.ingress.kubernetes.io/ssl-protocols: "TLSv1.2 TLSv1.3"
   resources:
     limits:
       cpu: "1500m"
