--- a/fineract-helm/templates/fineract-server-deployment.yaml
+++ b/fineract-helm/templates/fineract-server-deployment.yaml
@@ -307,14 +307,14 @@ metadata:
   name: letsencrypt-dev
 spec:
   acme:
-    server: https://acme-staging-v02.api.letsencrypt.org/directory
-    email: alex@vuna.io
+    server: https://acme-v02.api.letsencrypt.org/directory  # Use staging for testing
+    email: alex@vuna.io  # Replace with your email
     privateKeySecretRef:
-      name: letsencrypt-dev-private-key
+      name: letsencrypt-dev
     solvers:
       - http01:
           ingress:
-            ingressClassName: nginx
+            class: nginx  # Ensure this matches your Ingress class
 
 ---
 apiVersion: cert-manager.io/v1
@@ -323,9 +323,9 @@ metadata:
   name: fineract-cert
   namespace: paymenthub-ns
 spec:
-  secretName: finercat-dev-tls-secret
+  secretName: fineract-dev-tls-secret  # Ensure the secret name is correct
   issuerRef:
-    name: letsencrypt-dev
+    name: letsencrypt-dev  # Ensure this matches your ClusterIssuer name
     kind: ClusterIssuer
   commonName: api.vuna.io
   dnsNames:
