--- a/fineract-helm/templates/fineract-server-deployment.yaml
+++ b/fineract-helm/templates/fineract-server-deployment.yaml
@@ -32,11 +32,11 @@ spec:
       port: {{ .Values.fineract.env.CONTAINER_PORT }}
       targetPort: {{ .Values.fineract.env.FINERACT_SERVER_PORT }}
       nodePort: 30944
-#    - name: 80-8089
-#      protocol: TCP
-#      port: 80
-#      targetPort: 8089
-#      nodePort: 30748
+    - name: 80-8089
+      protocol: TCP
+      port: 80
+      targetPort: 8089
+      nodePort: 30748
   selector:
     app: fineract-server
     tier: backend
@@ -207,13 +207,13 @@ spec:
   - host: "{{ .Values.fineract.ingress.hostname }}"
     http:
       paths:
-#        - path: /.well-known/acme-challenge
-#          pathType: Prefix
-#          backend:
-#            service:
-#              name: cm-acme-http-solver  # Service for HTTP traffic
-#              port:
-#                number: 80
+        - path: /
+          pathType: Prefix
+          backend:
+            service:
+              name: fineract-server-srv  # Service for HTTP traffic
+              port:
+                number: 80
         - path: "{{ .Values.fineract.ingress.path }}"
           pathType: Prefix
           backend:
@@ -221,10 +221,10 @@ spec:
               name: fineract-server-srv
               port:
                 number: {{ .Values.fineract.env.CONTAINER_PORT }}
-  tls:
-    - hosts:
-      - api.vuna.io
-      secretName: finercat-dev-tls-secret
+#  tls:
+#    - hosts:
+#      - api.vuna.io
+#      secretName: finercat-dev-tls-secret
 {{- end }}
 ---
 apiVersion: v1
@@ -300,37 +300,37 @@ subsets:
     ports:
       - port: 3306
 
----
-apiVersion: cert-manager.io/v1
-kind: ClusterIssuer
-metadata:
-  name: letsencrypt-dev
-spec:
-  acme:
-#    server: https://acme-v02.api.letsencrypt.org/directory  #prod environment
-    server: https://acme-staging-v02.api.letsencrypt.org/directory # Use staging for testing
-    email: alex@vuna.io  # Replace with your email
-    privateKeySecretRef:
-      name: letsencrypt-dev
-    solvers:
-      - http01:
-          ingress:
-            class: nginx  # Ensure this matches your Ingress class
-
----
-apiVersion: cert-manager.io/v1
-kind: Certificate
-metadata:
-  name: fineract-cert
-  namespace: paymenthub-ns
-spec:
-  secretName: fineract-dev-tls-secret  # Ensure the secret name is correct
-  issuerRef:
-    name: letsencrypt-dev  # Ensure this matches your ClusterIssuer name
-    kind: ClusterIssuer
-  commonName: api.vuna.io
-  dnsNames:
-    - api.vuna.io
+#---
+#apiVersion: cert-manager.io/v1
+#kind: ClusterIssuer
+#metadata:
+#  name: letsencrypt-dev
+#spec:
+#  acme:
+##    server: https://acme-v02.api.letsencrypt.org/directory  #prod environment
+#    server: https://acme-staging-v02.api.letsencrypt.org/directory # Use staging for testing
+#    email: alex@vuna.io  # Replace with your email
+#    privateKeySecretRef:
+#      name: letsencrypt-dev
+#    solvers:
+#      - http01:
+#          ingress:
+#            class: nginx  # Ensure this matches your Ingress class
+#
+#---
+#apiVersion: cert-manager.io/v1
+#kind: Certificate
+#metadata:
+#  name: fineract-cert
+#  namespace: paymenthub-ns
+#spec:
+#  secretName: fineract-dev-tls-secret  # Ensure the secret name is correct
+#  issuerRef:
+#    name: letsencrypt-dev  # Ensure this matches your ClusterIssuer name
+#    kind: ClusterIssuer
+#  commonName: api.vuna.io
+#  dnsNames:
+#    - api.vuna.io
 
 #---
 #apiVersion: networking.k8s.io/v1
