--- a/fineract-helm/templates/fineract-server-deployment.yaml
+++ b/fineract-helm/templates/fineract-server-deployment.yaml
@@ -221,10 +221,10 @@ spec:
               name: fineract-server-srv
               port:
                 number: {{ .Values.fineract.env.CONTAINER_PORT }}
-#  tls:
-#    - hosts:
-#      - api.vuna.io
-#      secretName: finercat-dev-tls-secret
+  tls:
+    - hosts:
+      - api.vuna.io
+      secretName: finercat-dev-tls-secret
 {{- end }}
 ---
 apiVersion: v1
@@ -301,7 +301,7 @@ subsets:
       - port: 3306
 
 #---
-#apiVersion: cert-manager.io/v1
+apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
   name: letsencrypt-dev
