feat: added lets encrypt ssl

--- a/fineract-helm/templates/fineract-server-deployment.yaml
+++ b/fineract-helm/templates/fineract-server-deployment.yaml
@@ -207,7 +207,7 @@ spec:
   - host: "{{ .Values.fineract.ingress.hostname }}"
     http:
       paths:
-        - path: /
+        - path: "/.well-known/acme-challenge"
           pathType: Prefix
           backend:
             service:
