--- a/fineract-helm/templates/fineract-server-deployment.yaml
+++ b/fineract-helm/templates/fineract-server-deployment.yaml
@@ -211,9 +211,9 @@ spec:
           pathType: Prefix
           backend:
             service:
-              name: cm-acme-http-solver-7f8j5  # Service for HTTP traffic
+              name: cm-acme-http-solver  # Service for HTTP traffic
               port:
-                number: 8089
+                number: 80
         - path: "{{ .Values.fineract.ingress.path }}"
           pathType: Prefix
           backend:
