--- a/fineract-helm/templates/fineract-server-deployment.yaml
+++ b/fineract-helm/templates/fineract-server-deployment.yaml
@@ -35,7 +35,7 @@ spec:
     - name: 80-8089
       protocol: TCP
       port: 80
-      targetPort: 8080
+      targetPort: 8089
       nodePort: 30748
   selector:
     app: fineract-server
@@ -207,13 +207,13 @@ spec:
   - host: "{{ .Values.fineract.ingress.hostname }}"
     http:
       paths:
-        - path: "/fineract-provider"
+        - path: "/.well-known/acme-challenge"
           pathType: Prefix
           backend:
             service:
-              name: fineract-server-srv  # Service for HTTP traffic
+              name: cm-acme-http-solver  # Service for HTTP traffic
               port:
-                number: 443
+                number: 8089
         - path: "{{ .Values.fineract.ingress.path }}"
           pathType: Prefix
           backend:
