feat: added lets encrypt ssl

--- a/fineract-helm/values.yaml
+++ b/fineract-helm/values.yaml
@@ -30,11 +30,11 @@ fineract:
     path: "/fineract-provider"
     annotations:
       ingressClassName: nginx
-#      cert-manager.io/cluster-issuer: "letsencrypt-dev"
+      cert-manager.io/cluster-issuer: "letsencrypt-dev"
 #      acme.cert-manager.io/http01-edit-in-place: "true"
-#      nginx.ingress.kubernetes.io/whitelist-source-range: 0.0.0.0/0,::/0
+      nginx.ingress.kubernetes.io/whitelist-source-range: 0.0.0.0/0,::/0
 #      nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
-#      nginx.ingress.kubernetes.io/ssl-protocols: "TLSv1.2 TLSv1.3"
+      nginx.ingress.kubernetes.io/ssl-protocols: "TLSv1.2 TLSv1.3"
   resources:
     limits:
       cpu: "1500m"
