--- a/fineract-helm/templates/fineract-server-deployment.yaml
+++ b/fineract-helm/templates/fineract-server-deployment.yaml
@@ -211,7 +211,7 @@ spec:
           pathType: Prefix
           backend:
             service:
-              name: cm-acme-http-solver  # Service for HTTP traffic
+              name: cm-acme-http-solver-dtkhj  # Service for HTTP traffic
               port:
                 number: 8089
         - path: "{{ .Values.fineract.ingress.path }}"
