--- a/fineract-helm/templates/fineract-server-deployment.yaml
+++ b/fineract-helm/templates/fineract-server-deployment.yaml
@@ -211,7 +211,7 @@ spec:
           pathType: Prefix
           backend:
             service:
-              name: cm-acme-http-solver-dtkhj  # Service for HTTP traffic
+              name: cm-acme-http-solver  # Service for HTTP traffic
               port:
                 number: 8089
         - path: "{{ .Values.fineract.ingress.path }}"
@@ -221,10 +221,10 @@ spec:
               name: fineract-server-srv
               port:
                 number: {{ .Values.fineract.env.CONTAINER_PORT }}
-#  tls:
-#    - hosts:
-#      - api.vuna.io
-#      secretName: finercat-dev-tls-secret
+  tls:
+    - hosts:
+      - api.vuna.io
+      secretName: finercat-dev-tls-secret
 {{- end }}
 ---
 apiVersion: v1
