feat: added lets encrypt ssl

--- a/fineract-helm/templates/fineract-server-deployment.yaml
+++ b/fineract-helm/templates/fineract-server-deployment.yaml
@@ -207,13 +207,13 @@ spec:
   - host: "{{ .Values.fineract.ingress.hostname }}"
     http:
       paths:
-        - path: /.well-known/acme-challenge/
+        - path: /.well-known/acme-challenge
           pathType: Prefix
           backend:
             service:
-              name: cm-acme-http-solver-tt7nw  # Ensure this service is the correct one
+              name: nginx-service # Ensure this service is the correct one
               port:
-                number: 8089
+                number: 80
         - path: /
           pathType: Prefix
           backend:
